<resources>
    <string name="app_name">IMShareMusic</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="logining">登陆中</string>
    <string name="login_hint_account">请输入账号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="latest_message_draft_prefix">[草稿] </string>
    <string name="main_msg_unread_msg_count">[%d条]</string>
    <string name="out_time">超时</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="login_failed">登录失败</string>
    <string name="internet_broken">网络断开</string>

    <string name="chat_room">直播间</string>
    <string name="chat_room_message">直播互动</string>
    <string name="chat_room_master">主播</string>
    <string name="chat_room_online_people">在线成员</string>
    <string name="chat_room_announcement">直播公告</string>
    <string name="no_announcement">暂无公告</string>
    <string name="online">正在直播</string>
    <string name="chatroom_kick_member">踢人</string>
    <string name="chatroom_muted">禁言</string>
    <string name="chatroom_blacklist">拉黑该用户</string>
    <string name="move_out_blacklist">移出黑名单</string>
    <string name="chatroom_set_admin">任命管理员</string>
    <string name="cancel_admin">取消管理员</string>
    <string name="set_normal_member">设为普通成员</string>
    <string name="cancel_normal_member">移出普通成员</string>
    <string name="chatroom_fetch_member_failed">获取用户资料失败</string>
    <string name="cancel_muted">取消禁言</string>
    <string name="set_success">设置成功</string>
    <string name="mark_member_level">设置成员等级</string>
    <string name="set_level">设置等级</string>
    <string name="cancel_level">取消等级</string>
    <string name="no_data">暂无数据</string>
    <string name="copyright">Copyright ©1997-2016 广西科技大学计通学院通信工程121班周海源版权所有</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 个人名片 -->
    <string name="birthday">生 日</string>
    <string name="phone">手 机</string>
    <string name="email">邮 箱</string>
    <string name="signature">签 名</string>
    <string name="head">头 像</string>
    <string name="user_information">个人信息</string>
    <string name="nickname">昵 称</string>
    <string name="alias">备注名</string>
    <string name="gender">性 别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="other">其他</string>
    <string name="phone_number">手机号码</string>
    <string name="set_head_image">设置头像</string>
    <string name="user_info_update_success">设置成功</string>
    <string name="user_info_update_cancel">取消更新</string>
    <string name="user_info_update_failed">设置失败，请重试</string>
    <string name="head_update_success">头像设置成功</string>
    <string name="head_update_failed">头像设置失败，请重试</string>
    <string name="nickname_empty">昵称不能为空</string>
</resources>
