<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/wallpaper"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/im_chatroom_logo"
                android:contentDescription="@string/empty"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_login_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_account"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_black_000000_88_transparent"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp"/>

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_black_000000_88_transparent"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_register_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_account"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_black_000000_88_transparent"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp"/>

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_register_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_nickname"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_black_000000_88_transparent"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp"/>

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_black_000000_88_transparent"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp"/>
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/login_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="15dip"
                android:text="@string/login"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/register_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="15dip"
                android:text="@string/register"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>